# python-mcp-example

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: api.md  claude-desktop-setup.md  configuration.md  installation.md  usage.md
mcp_kubernetes/: __init__.py  __main__.py  cli.py  config.py  server.py
tests/: __init__.py  test_server.py
tests/integration/: README.md  __init__.py  conftest.py  test_mcp_protocol_integration.py  test_read_only_integration.py
